--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,5 +23,7 @@
     <footer>
         <p>&copy; 2024 The Coffee Shop. All rights reserved.</p>
     </footer>
+    
+    <script src="/js/script.js"></script>
 </body>
 </html>
