--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,22 +1,36 @@
 <!-- Footer Section -->
 <footer>
     <div class="footer-container">
-        <!-- Social Media Links -->
-        <div class="footer-social">
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://twitter.com" target="_blank">Twitter</a>
+        <!-- Logo on the Left -->
+        <div class="footer-logo">
+            <img src="/images/logo.png" alt="The Coffee House Logo">
+            <h3>The Coffee House</h3>
         </div>
-        <!-- Contact Info -->
-        <div class="footer-contact">
+
+        <!-- Address in the Middle -->
+        <div class="footer-address">
             <p>123 Coffee Lane, Brewtown, USA</p>
             <p>Phone: (123) 456-7890</p>
-            <p>Email: contact@thecoffeeshop.com</p>
+            <p>Email: contact@thecoffeehouse.com</p>
         </div>
-        <!-- Copyright and Credit -->
-        <div class="footer-credit">
-            <p>&copy; 2024 The Coffee Shop. All rights reserved.</p>
-            <p>Powered by <a href="https://yourcompany.com" target="_blank">Your Company Name</a>.</p>
+
+        <!-- Social Media Links on the Right -->
+        <div class="footer-social">
+            <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+                <img src="/images/instagram-icon.png" alt="Instagram">
+            </a>
+            <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+                <img src="/images/facebook-icon.png" alt="Facebook">
+            </a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+                <img src="/images/twitter-icon.png" alt="Twitter">
+            </a>
         </div>
+    </div>
+
+    <!-- Copyright at the Bottom -->
+    <div class="footer-copyright">
+        <p>&copy; 2024 The Coffee House. All rights reserved.</p>
+        <p>Powered by <a href="https://yourcompany.com" target="_blank">Your Company Name</a>.</p>
     </div>
 </footer>
